--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
 				<img id="enemy-bullet" src="images/1f525.png">
 			</div>
 		</div>
+		<textarea></textarea>
 		<div class="dialog-actions">
 			<button class="mdl-button mdl-js-button mdl-js-ripple-effect" onclick="Battle.attack()" id="attack-button">
 				ATTACK!
