--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
 					<div id="game-log"></div>
 				  </div>
 				</div>
+				<input type='text' id='foo'><div onclick='$("#foo").focus();'>Input</div>
 			</div>
 			
 			<div id="no-ads" style="display:none;">It would be appreciated if you disable adblock!</div>
@@ -456,7 +457,6 @@
 				<img id="enemy-bullet" src="images/1f525.png">
 			</div>
 		</div>
-		<textarea></textarea>
 		<div class="dialog-actions">
 			<button class="mdl-button mdl-js-button mdl-js-ripple-effect" onclick="Battle.attack()" id="attack-button">
 				ATTACK!
