--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 					<div id="game-log"></div>
 				  </div>
 				</div>
-				<input type='text' id='foo'><div onclick='$("#foo").focus();'>Input</div>
+				<input type='text' id='foo'><div onclick='$("#foo").focus();'>Input</div></input>
 			</div>
 			
 			<div id="no-ads" style="display:none;">It would be appreciated if you disable adblock!</div>
