--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						XP: <b id="player-xp-stats">0</b> / <b id="player-maxxp-stats">0</b> (Level <b id="player-lvl-stats">1</b>)
 					</div>
 					<div style="clear:both;"></div><br>
-					<input type='text' id='foo'><div onclick='$("#foo").focus();'>Input</div></input>
+					<input type='text' id='foo'><div onclick='$("#foo").focus();'></div></input>
 					<div id="game-log"></div>
 				  </div>
 				</div>
